--- a/client/coffeeranker.html
+++ b/client/coffeeranker.html
@@ -1,6 +1,10 @@
 <Html>
 	<head>
 		 <script language="javascript" src="javascripts/underscore-min.js" type="text/javascript"></script>
-		 <script language="javascript" src="javascripts/backbone-min.js" type="text/javascript"></script>		 
+		 <script language="javascript" src="javascripts/backbone-min.js" type="text/javascript"></script>			 	 
 	</head>
+
+	<body>
+		<script language="javascript" src="coffeeranker.js" type="text/javascript"></script>	
+	</body>
 </Html>
