--- a/client/coffeeranker.html
+++ b/client/coffeeranker.html
@@ -1,7 +1,8 @@
 <Html>
 	<head>
 		 <script language="javascript" src="javascripts/underscore-min.js" type="text/javascript"></script>
-		 <script language="javascript" src="javascripts/backbone-min.js" type="text/javascript"></script>			 	 
+		 <script language="javascript" src="javascripts/backbone-min.js" type="text/javascript"></script>	
+		 <script language="javascript" src="javascripts/handlebars.js" type="text/javascript"></script>		 	 
 	</head>
 
 	<body>
